--- a/Git-101.md
+++ b/Git-101.md
@@ -1,3 +1,8 @@
+---
+geometry: margin=2.5cm
+output: pdf_document
+---
+
 # Git 101
 
 ## Initialising
@@ -7,9 +12,10 @@
 3. Add all files using `git add .`
 4. Check the status with `git status`, this will show the files in the repository in green
 5. Commit with `git commit -am "initial version"`
-6. Link to your repository with `git remote add origin https://github.com/USERNAME/PROJECT-NAME.git`
+6. Link to your repository with `git remote add origin 
+https://github.com/USERNAME/PROJECT.git`
 7. Push to the online repository with `git push -u origin master`
-8. To clone the repo use: `git clone https://https://github.com/USERNAME/PROJECT-NAME.git`
+8. To clone the repo use: `git clone https://https://github.com/USERNAME/PROJECT.git`
 
 ## Workflow
 
@@ -22,6 +28,18 @@ $ git add X             track new files
 ...                     edit .gitignore to ignore files
 $ git commit -am "..."  (take a snapshot)
 git push                Push changes
+~~~
+
+## Branching
+
+Branches allow changes to be made to the existing codebase whilst keeping the default (`master`) branch
+unchanged. This is ideal for feature additions and code rewrites.
+
+>
+~~~
+git checkout -b newbranchname
+git commit -am "..."
+git push --set-upstream origin newbranchname
 ~~~
 
 ## Zipping
