--- a/CTCI/CTCI.ipynb
+++ b/CTCI/CTCI.ipynb
@@ -11,7 +11,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.1"
+    "## 1.1 Is Unique:\n",
+    "Implement an algorithm to determine if a string has all unique characters. What if you cannot use additional data structures?"
    ]
   },
   {
@@ -29,12 +30,15 @@
    ],
    "source": [
     "def isUnique(string):\n",
-    "    seenChars = {}\n",
+    "    seenChars = {} # O(n) space\n",
+    "    # O(n) time\n",
     "    for char in string:\n",
     "        if char in seenChars:\n",
     "            return False\n",
     "        seenChars[char] = 1\n",
     "    return True\n",
+    "\n",
+    "# without additional data structures, compare iteratively O(n^2)\n",
     "\n",
     "a = isUnique('cac')\n",
     "b = isUnique('car')\n",
@@ -47,7 +51,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.2"
+    "## 1.2 Check Permutation: \n",
+    "Given two strings, write a method to decide if one is a permutation of the other."
    ]
   },
   {
@@ -95,7 +100,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.3"
+    "## 1.3 URLify: \n",
+    "Write a method to replace all spaces in a string with '%20'. You may assume that the string has sufficient space at the end to hold the additional characters,and that you are given the \"true\" length of the string."
    ]
   },
   {
@@ -151,7 +157,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.4"
+    "## 1.4 Palindrome Permutation: \n",
+    "Given a string, write a function to check if it is a permutation of a palindrome. A palindrome is a word or phrase that is the same forwards and backwards. A permutation is a rearrangement of letters. The palindrome does not need to be limited to just dictionary words."
    ]
   },
   {
@@ -191,7 +198,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.5"
+    "## 1.5 One Away: \n",
+    "There are three types of edits that can be performed on strings: insert a character, remove a character, or replace a character. Given two strings, write a function to check if they are one edit (or zero edits) away."
    ]
   },
   {
@@ -246,7 +254,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.6"
+    "## 1.6 String Compression: \n",
+    "Implement a method to perform basic string compression using the counts of repeated characters. For example, the string aabcccccaaa would become a2blc5a3. If the \"compressed\" string would not become smaller than the original string, your method should return the original string. You can assume the string has only uppercase and lowercase letters (a - z)."
    ]
   },
   {
@@ -292,7 +301,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.7"
+    "## 1.7 Rotate Matrix: \n",
+    "Given an image represented by an NxN matrix, where each pixel in the image is 4 bytes, write a method to rotate the image by 90 degrees. Can you do this in place?"
    ]
   },
   {
@@ -332,7 +342,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.8"
+    "## 1.8 Zero Matrix: \n",
+    "Write an algorithm such that if an element in an MxN matrix is 0, its entire row and column are set to 0."
    ]
   },
   {
@@ -379,7 +390,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.9"
+    "## 1.9 String Rotation:\n",
+    "Assume you have a method isSubstring which checks if one word is a substring of another. Given two strings, sl and s2, write code to check if s2 is a rotation of sl using only one call to isSubstring (e.g.,\"waterbottle\" is a rotation of\"erbottlewat\")."
    ]
   },
   {
@@ -432,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,12 +482,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.1"
+    "## 2.1 Remove Dups:\n",
+    "Write code to remove duplicates from an unsorted linked list.\n",
+    "\n",
+    "How would you solve this problem if a temporary buffer is not allowed?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -503,6 +518,7 @@
     "            prev = current\n",
     "            current = current.next\n",
     "\n",
+    "# this allows us to call deleteDuplicates as a method of Node\n",
     "setattr(Node, 'deleteDuplicates', deleteDuplicates)\n",
     "\n",
     "# Fix\n",
@@ -537,7 +553,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.2"
+    "## 2.2 Return Kth to Last: \n",
+    "Implement an algorithm to find the kth to last element of a singly linked list."
    ]
   },
   {
@@ -592,7 +609,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.3"
+    "## 2.3 Delete Middle Node: \n",
+    "Implement an algorithm to delete a node in the middle (i.e., any node but the first and last node, not necessarily the exact middle) of a singly linked list, given only access to that node."
    ]
   },
   {
@@ -638,7 +656,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.4"
+    "## 2.4 Partition: \n",
+    "Write code to partition a linked list around a value x, such that all nodes less than x come before all nodes greater than or equal to x. If x is contained within the list, the values of x only need to be after the elements less than x (see below). The partition element x can appear anywhere in the \"right partition\"; it does not need to appear between the left and right partitions."
    ]
   },
   {
@@ -700,7 +719,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.5"
+    "## 2.5 Sum Lists: \n",
+    "You have two numbers represented by a linked list, where each node contains a single digit.The digits are stored in reverse order, such that the 1 's digit is at the head of the list. Write a function that adds the two numbers and returns the sum as a linked list."
    ]
   },
   {
@@ -761,7 +781,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.6"
+    "## 2.6 Palindrome: \n",
+    "Implement a function to check if a linked list is a palindrome."
    ]
   },
   {
@@ -816,7 +837,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.7"
+    "## 2.7 Intersection: \n",
+    "Given two (singly) linked lists, determine if the two lists intersect. Return the intersecting node. Note that the intersection is defined based on reference, not value.That is, if the kth node of the first linked list is the exact same node (by reference) as the jth node of the second linked list, then they are intersecting."
    ]
   },
   {
@@ -900,7 +922,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.8"
+    "## 2.8 Loop Detection: \n",
+    "Given a circular linked list, implement an algorithm that returns the node at the\n",
+    "beginning of the loop."
    ]
   },
   {
@@ -980,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1000,7 +1024,7 @@
        "True"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1036,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -1055,7 +1079,7 @@
        "True"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1110,7 +1134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1121,7 +1145,7 @@
     "        if length < no_stacks: return 'More stacks than space in array'\n",
     "        self.stacks = {}\n",
     "        self.array = [None] * length\n",
-    "        for i in range no_stacks:\n",
+    "        for i in range(no_stacks):\n",
     "            self.stacks[i] = (i*length)-1\n",
     "    def checkIndex(self, index):\n",
     "        if stack > 0 and stack < 4 :\n",
@@ -1129,9 +1153,7 @@
     "        return False\n",
     "    def push(self, stack, item):\n",
     "        if self.checkIndex(stack):\n",
-    "            self.array[stack] = item\n",
-    "                \n",
-    "        "
+    "            self.array[stack] = item"
    ]
   },
   {
@@ -1143,7 +1165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1235,7 +1257,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5.2"
+    "## 5.1\n",
+    "See BitManipulation.java"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5.2\n",
+    "\n",
+    "cf BitManipulation.java"
    ]
   },
   {
@@ -1273,11 +1305,6 @@
     "\n",
     "binary_to_string(0.6875)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
